# i2cpp

./: .gitignore  CMakeLists.txt  I2cDeviceConfig.h.in  README.md
include/: I2cDevice.h
src/: I2cDevice.cpp  main.cpp
